...
        flipCamera.accessibilityLabel = "camera"
    }
    
    func addSettingsButton() {
        settingsButton.frame = CGRect(x: 0, y: 0, width: screenBounds.width/5, height: screenBounds.width/5)
        settingsButton.setImage(UIImage(named: "cog.png"), forState: UIControlState.Normal)
        settingsButton.accessibilityLabel = "settings"
    }
    
    func addPendingPhlashesButton() {
        pendingPhlashesButton.frame = CGRect(x: screenBounds.width*2/5, y: 0, width: screenBounds.width/5, height: screenBounds.width/5)
        pendingPhlashesButton.setImage(UIImage(named: "emptybolt.png"), forState: UIControlState.Normal)
        pendingPhlashesButton.accessibilityLabel = "bolt"
...
    
    
    func addLogoutButton() {
        logoutButton.frame = CGRect(x: 0, y: -screenBounds.width*2/5, width: screenBounds.width/2, height: screenBounds.width/10)
        logoutButton.setTitleColor(.whiteColor(), forState: .Normal)
        logoutButton.setTitle(" Logout", forState: .Normal)
        logoutButton.accessibilityLabel = "logout"
        logoutButton.contentHorizontalAlignment = UIControlContentHorizontalAlignment.Left
    }
    
    func addContainerView() {
        containerView.frame = CGRect(x: 0, y: 0, width:screenBounds.width, height:screenBounds.height)
        containerView.userInteractionEnabled = true
...
