...
    }
        
    func login() {
        let username = usernameField.text
        let password = passwordField.text
        if isInvalidInput(username!, password: password!) {
            AlertMessage().show(statusLabel, message: "error: please review your input")
            return
        }
        
        UserAuthentication().login(self, username: username!, password: password!, statusLabel: statusLabel, submitButton: submitButton)
        clearTextFields()
    }
...
